[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tweet_data_pipeline"
version = "0.0.1"
authors = [
  { name="Hamza Haleem" }
]
description = "Package containing tweet data pipeline"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "sqlalchemy==2.0.22",
  "asyncpg==0.27.0",
  "dagster==1.5.13",
  "dagster-webserver==1.5.13",
  "dagster-postgres==0.21.13",
  "dagit==1.5.13",
  "pandas==2.1.1",
  "greenlet==3.0.3",
  "tweepy==4.14.0"

]

[project.optional-dependencies]
dev = []

build = [
  "build == 1.0.3",
  "twine == 4.0.2"
]

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["tweet_data_pipeline"]

[tool.dagster]
module_name = "tweet_data_pipeline"
